--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,28 +1,26 @@
 * {
-    font-family: Jetbrains Mono Nerd Font, sans-serif;
-    font-size: 15px;
+  font-family: Jetbrains Mono Nerd Font, sans-serif;
+  font-size: 15px;
 }
 
 window#waybar {
-    background-color: transparent;
-    color: #ffffff;
-    transition-property: all;
-    transition-duration: .5s;
+  background-color: #181825;
+  color: #cdd6f4;
+  transition-property: all;
+  transition-duration: .5s;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 window#waybar.hidden {
-    opacity: 0.2;
+  opacity: 0.2;
 }
 
 
 /* Left modules */
 
 .modules-left{
-  background-color: #000917;
   padding-left:5px;
-  padding-right:5px;
-  border-radius: 10px;
-  border: 2px solid #000326;
 
 }
 
@@ -35,46 +33,39 @@ window#waybar.hidden {
 }
 
 #workspaces button {
-    padding: 10px 5px;
-    background-color: #000917;
-    border-radius:0;
-    color: #ffffff;
-    outline:none;
-    border:none;
+  padding: 10px 5px;
+  background-color: #181825;
+  border-radius:0;
+  color: #cba6f7;
+  outline:none;
+  border:none;
 }
 
 #workspaces button:hover {
-    color:#cba6f7;
+  color:#b4befe;
 }
 
 #workspaces button.focused {
-    box-shadow: inset 0 -3px #5c5b5b;
+  box-shadow: inset 0 -3px #7f849c;
 }
 
 #workspaces button.urgent {
-    color: #eb4d4b;
+  color: #eba0ac;
 }
-
 
 /* Center Modules */
 
 .modules-center{
-  background-color: #000917;
   padding-left:10px;
   padding-right:10px;
-  border-radius: 10px;
-  border: 2px solid #000326;
 }
 
 /* Right modules */
 .modules-right{
-  background-color: #000917;
-  padding-left:10px;
   padding-right:10px;
-  border-radius: 10px;
-  border: 2px solid #000326;
 }
 
 #network{
   padding:10px;
+  color: #cba6f7;
 }
