--- a/.config/waybar/gruvbox.css
+++ b/.config/waybar/gruvbox.css
@@ -1,6 +1,5 @@
 /*    GRUVBOX DARK PALETTE
       --------------------		
-*/
 @define-color bg        #282828;
 @define-color gray1     #928374;
 @define-color red1      #cc241d;
@@ -32,9 +31,11 @@
 @define-color fg0       #fbf1c7;
 @define-color orange1   #d65d0e;
 @define-color orange2   #af3a03;
+*/
 
 /*    GRUVBOX LIGHT PALETTE
       ---------------------     
+*/
 @define-color bg        #fbf1c7;
 @define-color gray1     #928374;
 @define-color red1      #cc241d;
@@ -66,11 +67,10 @@
 @define-color fg0       #282828;
 @define-color orange1   #d65d0e;
 @define-color orange2   #af3a03;
-*/
 
 /*	COLOR BINDS
 	-----------			*/
-@define-color waybar            @bg;
+@define-color waybar            @bg2;
 @define-color text-main         @fg;
 @define-color text-opposite     @bg;
 @define-color text-alert        @red2;
@@ -80,7 +80,7 @@
 @define-color workspaces        @yellow1;
 @define-color workspaces-hover  @yellow2;
 @define-color workspaces-active @bg;
-@define-color workspaces-full   @fg4;
+@define-color workspaces-full   @fg3;
 @define-color workspaces-bg     @bg3;
 @define-color workspaces-empty  @bg1;
 @define-color day               @orange1;
